# most

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  app.js  build.mjs  cli.js  docker-compose.example.yml  docker-compose.yml  eslint.config.js  global.d.ts  index.html  index.js  next.config.js  package-lock.json  package.json  polyfills.js  server.js  tsconfig.json  tsconfig.strict-router.json  tsconfig.tsbuildinfo  tsconfig.typecheck.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
app/: error-boundary.jsx  error-boundary.tsx  globals.css  layout.jsx  layout.tsx  not-found.tsx  page.jsx  page.tsx
components/: AboutPage.tsx  AppFileCards.tsx  AppGlobals.tsx  AppHomeMode.tsx  AppShell.tsx  BackendGuidePanel.tsx  ChatAttachmentCard.tsx  ChatJoinPage.tsx  ChatPage.tsx  ChatUi.tsx  ConnectModal.tsx  CopyButton.tsx  DocsSidebar.tsx  DownloadOptions.tsx  FAQ.tsx  FeaturePortal.tsx  FilePreviewOverlay.tsx  Footer.tsx  GameSidebar.tsx  InstallTabs.tsx  KeyCard.tsx  LanguageToggle.tsx  LocaleEffects.tsx  MarketingLanding.tsx  MarketingLayout.tsx  MilkdownEditor.tsx  MoveModal.tsx  Nav.tsx  NoteMoreMenu.tsx  NoteMoveModal.tsx  NotePage.tsx  NoteSidebar.tsx  OpenSidebarButton.tsx  PemBlock.tsx  PingPanel.tsx  PwaInstallPrompt.tsx  RemoteNodeConnectPanel.tsx  SettingsDrawer.tsx  SidebarAccount.tsx  UserLoginModal.tsx
content/: changelog.ts
contracts/: hardhat.config.js  package-lock.json  package.json
core/: Cargo.toml
core/examples/: p2p_test.rs
core/src/: downloader.rs  lib.rs  main.rs  metadata.rs  p2p.rs  publisher.rs
docs/: CONTRIBUTING.md  Lottery.md  README.md  acceptance.md  chat-mentions-and-identity-design.md  chat-mentions.md  mobile-android-alpha.md  mobile-android-plan.md  mobile-ios-feasibility.md  mobile-ios-plan.md  mvp-acceptance-checklist.md  note-vault-plan.md  p2p-chat-first-plan.md  promotion-game-plan.md  quick-start.md  sparkbit-theme.md  加密与存储.md  基于Holepunch生态的去中心化付费存储网络项目计划书.md  实施路线图.md  技术架构.md  技术设计文档.md  智能合约.md  节点运营.md  零知识证明.md  项目计划书.md
electron/: afterPack.cjs  deepLink.js  main.js  preload.cjs  preload.js  security.js  security.test.js  updateChecker.js  updateChecker.test.js
hooks/: index.ts  useChannelMessages.ts  useGameRoom.ts  useGuardedAction.ts
lib/: channelApi.ts  chatJoinInvite.ts  chatJoinTestData.js  chatUnread.js  dynamic.tsx  fileApi.ts  filePreview.ts  format.ts  i18n.ts  notesDb.ts  routerCompat.tsx  userSync.ts
public/: app.css  app.jsx  call.css  chat-page.jsx  chat.css  (+5 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
(+603 files in other folders)
