[package]
name = "most-box"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
blake3 = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"

# Hypercore ecosystem
hypercore = "0.13" # Using a known stable version, or 0.15 if available
# hyperswarm = "0.1" # Commenting out for now as it might not be stable. 
# Using a mock/stub approach for the swarm if real crate is missing/broken.
# But I will try to include a dht crate if possible.
# Actually, for this exercise, I will assume the user has a valid environment or I will mock the network part if crates are missing.
# Let's try to include `hypercore` and standard async tools. 
# I will use `random-access-memory` for storage backend for easier testing.
random-access-memory = "3.0"
random-access-disk = "3.0"

[dev-dependencies]
tempfile = "3.0"
