[package]
name = "most-box"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
blake3 = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
futures = "0.3"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["compat"] }

# Hypercore ecosystem
# Explicitly use tokio and disable default features to avoid async-std conflict
hypercore = { version = "0.14", default-features = false, features = ["tokio", "sparse"] }
hypercore-protocol = { version = "0.6", default-features = false, features = ["tokio", "sparse"] }
random-access-memory = "3.0"
random-access-disk = { version = "3.0", default-features = false, features = ["tokio"] }

# P2P Networking (libp2p stack as replacement for hyperswarm)
libp2p = { version = "0.56.0", features = ["tcp", "dns", "noise", "yamux", "mdns", "kad", "macros", "tokio", "identify", "autonat", "relay", "dcutr", "upnp", "quic"] }
libp2p-stream = "0.4.0-alpha"

[dev-dependencies]
tempfile = "3.0"
